# taxes

./: .gitignore  CLAUDE.md  FlatTax.py  Logger.py  README.md  RegressiveTaxBracket.py  pyproject.toml
.github/workflows/: claude.yml  tests.yml
brackets/: FederalIncomeTaxBrackets.py  GeorgiaStateIncomeTaxBrackets.py  MedicareIncomeTaxBrackets.py  SocialSecurityIncomeTaxBrackets.py
examples/: example.py  external_source_validation_example.py
src/: ProgressiveTax.py  RegressiveTax.py
src/easytax/: ProgressiveTax.py
src/taxes/: FlatTax.py  FlatTaxBracket.py  ProgressiveTax.py  RegressiveTax.py
tests/: external_source_integration_test.py  test_FlatTax.py  test_FlatTaxBracket.py  test_ProgressiveTax.py  test_ProgressiveTaxBracket.py  test_RegressiveTax.py  test_RegressiveTaxBracket.py
tests/base/: test_FlatTax.py  test_FlatTaxBracket.py  test_ProgressiveTax.py  test_ProgressiveTaxBracket.py  test_RegressiveTax.py  test_RegressiveTaxBracket.py
tests/brackets/: test_FederalIncomeTaxBrackets.py  test_FederalLongTermCapitalGainsTaxBrackets.py
tests/data/: README.md
tests/example/: test_example.py
tests/external_sources/: README.md  __init__.py  external_tax_verifier.py  test_external_tax_verifier.py  test_helpers.py
tests/handler/: test_FederalTaxHandler.py  test_GeorgiaTaxHandler.py  test_NetInvestmentIncomeTaxHandler.py  test_NewTaxYears.py  test_StateWithoutTaxHandler.py  test_TaxHandler.py  test_TaxHandler_with_external_verification.py
tests/income/: test_FederalIncomeHandler.py  test_PayrollTaxIncomeHandler.py
tests/utils/: TestContants.py  (+2 more)
(+42 files in other folders)
